docs/v1.0.4/CHANGELOGS/Mappls-Map.md
## v1.2.2, Aug 01, 2026
- Remove `hyperLocal` & `zoom` from Autosugget Request.
- Remove `username` from Nearby Request
- Remove `username` from Text Search Request.

## v1.2.1, Oct 14, 2025
* Support for 16 KB in Android

## v1.2.0, May 12, 2025
* Fix `PluginRegistry` issue in Android
* Fix Bitcode issue in IOS

## v1.1.2, Dec 23, 2024 
* Added Option to set Base Url in Search and Routing Api

## v1.1.1, Oct 28, 2024 
* Bug Fixes and Improvements

## v1.1.0, Jul 24, 2024
* All Dart enums have been migrated from mixed cases to lower camelcase according to the camel_case_types lint rule.
* Added minimum Dart SDK support to 3.0
* Update Android `compileSdkVersion` to 34
* Fixed Mappls Pin Marker issue in Flutter IOS

## v1.0.2, Jun 17, 2024
* Bug Fixes and Improvements

## v1.0.1, Dec 02, 2023
* Bug Fixes and Improvements

## v1.0.0, Mar 1, 2023
* Initial Mappls Release